Migrate from easyrtc to simple-peer and simple-signal. Implement React-based counter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
+  "parser": "babel-eslint",
+  "extends": ["airbnb", "prettier", "eslint:recommended", "plugin:react/recommended"],
+  "plugins": ["prettier", "react"],
   "rules": {
     "prettier/prettier": ["error"]
   },
