--- a/package.json
+++ b/package.json
@@ -12,24 +12,33 @@
   "author": "Aleksej Kazmin",
   "license": "MIT",
   "dependencies": {
-    "easyrtc": "^1.1.0",
     "express": "^4.16.4",
+    "nanobus": "^4.4.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-easy-state": "^6.0.6",
     "serve-static": "^1.13.2",
     "simple-peer": "^9.2.0",
     "simple-signal-client": "^2.0.2",
     "simple-signal-server": "^2.0.1",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "webrtc-adapter": "^7.1.1"
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.0",
+    "eslint-plugin-react": "^7.12.3",
     "prettier": "^1.15.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
