--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 # Created by https://www.gitignore.io/api/node,macos,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,macos,visualstudiocode
 
+### PureScript ###
+# Dependencies
+.psci_modules
+.pulp-cache
+
+# Generated files
+.psci
+output
+
 ### Compiled files ###
 static/dist/
 
