--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "pulp test",
     "build": "webpack --config webpack.config.js",
     "server": "node server.js"
   },
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "nanobus": "^4.4.0",
+    "purescript": "^0.12.2",
+    "purescript-psa": "^0.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-easy-state": "^6.0.6",
@@ -40,6 +42,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
     "prettier": "^1.15.3",
+    "purs-loader": "^3.2.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
