--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,15 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "type": "npm",
+      "script": "test-purs",
+      "path": "/",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      }
     }
   ]
 }
