Extract client to clientStore

--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "express": "^4.16.4",
     "nanobus": "^4.4.0",
+    "prop-types": "^15.6.2",
     "purescript": "^0.12.2",
     "purescript-psa": "^0.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-easy-state": "^6.0.6",
     "serve-static": "^1.13.2",
-    "simple-peer": "^9.2.0",
+    "simple-peer": "^9.2.1",
     "simple-signal-client": "^2.0.2",
     "simple-signal-server": "^2.0.1",
     "socket.io": "^2.2.0",
