--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
+    "test": "jest",
     "test-purs": "pulp test",
     "build": "webpack --config webpack.config.js",
     "server": "node server.js"
@@ -13,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "fabric": "^2.7.0",
+    "fastpriorityqueue": "^0.6.1",
     "nanobus": "^4.4.0",
     "prop-types": "^15.6.2",
     "purescript": "^0.12.2",
@@ -33,6 +36,7 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -42,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "jest": "^24.5.0",
     "prettier": "^1.15.3",
     "purs-loader": "^3.2.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
