--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "test-purs": "pulp test",
     "build": "webpack --config webpack.config.js",
     "server": "node server.js"
   },
   "author": "Aleksej Kazmin",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
+    "canvas": "^2.4.1",
     "express": "^4.16.4",
     "fabric": "^2.7.0",
     "fastpriorityqueue": "^0.6.1",
     "nanobus": "^4.4.0",
     "prop-types": "^15.6.2",
-    "purescript": "^0.12.2",
-    "purescript-psa": "^0.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-easy-state": "^6.0.6",
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
@@ -48,7 +49,8 @@
     "eslint-plugin-react": "^7.12.3",
     "jest": "^24.5.0",
     "prettier": "^1.15.3",
-    "purs-loader": "^3.2.0",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.4.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
