--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Aleksej Kazmin",
   "license": "MIT",
   "dependencies": {
+    "@types/fabric": "^2.6.9",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "canvas": "^2.4.1",
+    "capnp-ts": "^0.4.0",
     "express": "^4.16.4",
     "fabric": "^2.7.0",
     "fastpriorityqueue": "^0.6.1",
@@ -35,21 +37,25 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/jest": "^24.0.11",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "css-modules-typescript-loader": "^2.0.0",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.17.1",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^24.5.0",
     "prettier": "^1.15.3",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.4.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
