--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/fabric": "^2.6.9",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/socket.io-client": "^1.4.32",
     "canvas": "^2.4.1",
     "capnp-ts": "^0.4.0",
     "express": "^4.16.4",
