--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es6",
+    "target": "esnext",
     "jsx": "react"
   },
   "include": ["./src/**/*"]
