Add serialization through Cap'n Proto. Add syncing of full history to newly connected peer. Implement vector clock. Rename Combobulator->Diff Increase font size in text-area.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest",
     "build": "webpack --config webpack.config.js",
     "build-watch": "webpack --config webpack.config.js --watch",
-    "server": "node server.js"
+    "server": "node server.js",
+    "gen": "npm run generate-sources",
+    "generate-sources": "capnpc -o ts src/network/schema/*.capnp && rename -f 'src/network/schema/*.capnp.ts' '{{f|replace|.capnp|}}'"
   },
   "author": "Aleksej Kazmin",
   "license": "MIT",
@@ -17,8 +19,10 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/socket.io-client": "^1.4.32",
+    "buffer": "^5.2.1",
     "canvas": "^2.4.1",
     "capnp-ts": "^0.4.0",
+    "double-ended-queue": "^2.1.0-0",
     "express": "^4.16.4",
     "fabric": "^2.7.0",
     "fastpriorityqueue": "^0.6.1",
@@ -39,6 +43,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@types/double-ended-queue": "^2.1.0",
     "@types/jest": "^24.0.11",
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
@@ -56,6 +61,7 @@
     "eslint-plugin-react": "^7.12.3",
     "jest": "^24.5.0",
     "prettier": "^1.15.3",
+    "rename-cli": "^6.0.0",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.3",
