--- a/package.json
+++ b/package.json
@@ -16,17 +16,15 @@
   "license": "MIT",
   "dependencies": {
     "@types/chance": "^1.0.4",
-    "@types/fabric": "^2.6.9",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/socket.io-client": "^1.4.32",
+    "acorn": "^6.1.1",
     "buffer": "^5.2.1",
-    "canvas": "^2.4.1",
     "capnp-ts": "^0.4.0",
     "chance": "^1.0.18",
     "double-ended-queue": "^2.1.0-0",
     "express": "^4.16.4",
-    "fabric": "^2.7.0",
     "fastpriorityqueue": "^0.6.1",
     "nanobus": "^4.4.0",
     "prop-types": "^15.6.2",
