--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0"
+  },
+  "engines": {
+    "node": "10.15.0"
   }
 }
