--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react",
-    "typeRoots": ["src/typings"]
+    "jsx": "react"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
