Add online/offline toggle

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "webpack --config webpack.config.js",
     "build-watch": "webpack --config webpack.config.js --watch",
     "server": "node server.js",
-    "gen": "npm run generate-sources",
-    "generate-sources": "capnpc -o ts src/network/schema/*.capnp && rename -f 'src/network/schema/*.capnp.ts' '{{f|replace|.capnp|}}'"
+    "gen": "npm run generate-sources && npm run generate-components-css",
+    "generate-sources": "capnpc -o ts src/network/schema/*.capnp && rename -f 'src/network/schema/*.capnp.ts' '{{f|replace|.capnp|}}'",
+    "generate-components-css": "tcm src/components"
   },
   "author": "Aleksej Kazmin",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "@types/chance": "^1.0.4",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-toggle": "^4.0.2",
     "@types/socket.io-client": "^1.4.32",
     "acorn": "^6.1.1",
     "buffer": "^5.2.1",
@@ -31,6 +33,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-easy-state": "^6.0.6",
+    "react-toggle": "^4.0.2",
     "serve-static": "^1.13.2",
     "simple-peer": "^9.2.1",
     "simple-signal-client": "^2.0.2",
@@ -63,7 +66,9 @@
     "prettier": "^1.15.3",
     "rename-cli": "^6.0.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
+    "typed-css-modules": "^0.4.2",
     "typescript": "^3.4.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
